--- a/day29-double-click-heart/styles.css
+++ b/day29-double-click-heart/styles.css
@@ -32,6 +32,18 @@ main {
     background-size: cover;
     background-position: center center;
     border-radius: 5pz;
+    position: relative;
+}
+.heart {
+    font-size: 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #ff0000;
+
+    animation-duration: 1s;
+    animation-timing-function: linear;
 }
 
 .info {
@@ -48,4 +60,16 @@ main {
     font-size: 1.5em;
     font-size: 600;
     color: #5f5f5f;
+}
+
+
+@keyframes HeartLike {
+    from {
+        font-size: 0;
+        opacity: 1;
+    }
+    to {
+        font-size: 200px;
+        opacity: 0;
+    }
 }
