--- a/day33-notes-app/styles.css
+++ b/day33-notes-app/styles.css
@@ -51,6 +51,7 @@ header button {
 }
 .note {
     width: 350px;
+    margin: 10px;
 }
 .note-head {
     width: 100%;
@@ -76,7 +77,13 @@ header button {
     height: 400px;
     padding: 10px;
     background-color: var(--primary-bg-color-light);
-    font-size: 1.8em;
     border: none;
     outline: none;
+    font-size: 1.4em;
+    overflow-wrap: break-word;
+    overflow: auto;
+}
+.note-body.writable { 
+    display: none;
+    font-size: 1.8em;
 }
