--- a/day1-expanding-cards/style.css
+++ b/day1-expanding-cards/style.css
@@ -7,8 +7,15 @@
 body {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
+}
+
+.title {
+    margin: 32px 0;
+    color: #333;
+    text-align: center;
 }
 
 .wrapper {
