--- a/day44-custom-range-slider/styles.css
+++ b/day44-custom-range-slider/styles.css
@@ -11,7 +11,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, #eee, #0081a7);
+    background: linear-gradient(to right, #0081a7 0%, #eee 0%);
     font-family: sans-serif, Arial;
 }
 
