--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ button:active {
 main {
     width: 100%;
     height: 100vh;
-    background-image: url('/src/images/background.png');
+    background-image: url('./images/background.png');
     background-size: cover;
     background-position: center;
     position: relative;
